:bug: fix https://github.com/siyuan-note/siyuan/issues/7100

--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -222,6 +222,7 @@
           padding: 4px 0 4px 8px;
           height: 14px;
           width: 14px;
+          flex-shrink: 0;
         }
 
         &__text {
