--- a/app/src/assets/scss/mobile.scss
+++ b/app/src/assets/scss/mobile.scss
@@ -246,6 +246,21 @@
   }
 }
 
+#transactionTip {
+  position: fixed;
+  top: 73px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background: var(--b3-theme-background);
+  padding: 4px;
+  box-shadow: var(--b3-point-shadow);
+  z-index: 1;
+  line-height: 28px;
+  left: 8px;
+  right: 8px;
+  text-align: center;
+}
+
 .svg {
   fill: currentColor;
   display: inline-block;
