:bug: 修复窗口内浮窗 protyle 元素滚动问题

--- a/app/src/assets/scss/protyle/_content.scss
+++ b/app/src/assets/scss/protyle/_content.scss
@@ -1,6 +1,6 @@
 .protyle {
   font-family: var(--b3-font-family);
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: var(--b3-theme-background);
   position: relative;
   max-height: 100%;
