:art: 修复使用系统默认图标时图标宽度与自定义图标不一致问题

--- a/app/src/assets/scss/component/_list.scss
+++ b/app/src/assets/scss/component/_list.scss
@@ -137,6 +137,7 @@
       margin-right: 4px;
       line-height: 22px;
       height: 22px;
+      width: 16px;
       transition: var(--b3-transition);
       padding: 0 4px;
       flex-shrink: 0;
