--- a/app/src/assets/scss/component/_list.scss
+++ b/app/src/assets/scss/component/_list.scss
@@ -125,7 +125,7 @@
     &__icon {
       svg, img {
         float: left;
-        margin: 3px 0;
+        margin: 0 -2px 0 2px;
         height: 16px;
         width: 16px;
         color: var(--b3-theme-on-surface);
@@ -139,7 +139,7 @@
       height: 22px;
       width: 16px;
       transition: var(--b3-transition);
-      padding: 0 4px;
+      padding: 0 6px 0 2px;
       flex-shrink: 0;
 
       &:hover {
