:bug: 调整挂件导出的 YFM 样式 | Adjusted the YFM style with widget export

--- a/app/src/assets/scss/component/_typography.scss
+++ b/app/src/assets/scss/component/_typography.scss
@@ -245,7 +245,7 @@
     }
   }
 
-  code:not(.hljs),
+  code:not(.hljs):not([data-type="yaml-front-matter"]),
   span[data-type~="code"] {
     @extend .fn__code;
   }
