--- a/app/src/assets/scss/export.scss
+++ b/app/src/assets/scss/export.scss
@@ -66,7 +66,7 @@ svg {
       // 尽量避免表格块行内分页
       tr,
       // 尽量避免图片内分页
-      img {
+      .img {
         break-inside: avoid;
       }
     }
